scripts/nullaway/nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8.txt
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java:38: error: [NullAway] initializer method does not guarantee @NonNull fields title (line 20), text (line 22), created (line 24), tags (line 26), authorId (line 28) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Post() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Blog.java:9: error: [NullAway] @NonNull field id not initialized
    public ObjectId id;
                    ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Author.java:31: error: [NullAway] initializer method does not guarantee @NonNull fields firstName (line 16), lastName (line 18), mailAdd (line 20), aboutMe (line 22) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Author() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/PostComments.java:37: error: [NullAway] initializer method does not guarantee @NonNull fields author (line 19), mailAdd (line 21), comment (line 23), created (line 25), postId (line 27) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public PostComments() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/factory/MongoDBFactory.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return mongoDBFactory;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/AuthorDAOImpl.java:40: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return author;
        ^
    (see http://t.uber.com/nullaway )
../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/dao/PostDAOImpl.java:44: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return post;
        ^
    (see http://t.uber.com/nullaway )
Note: ../nullgtn/urlb090c33e5e_vikrambindal_mongodb_tgz-pJ8-vikram_demo_main_BlogDemoMainJ8/src/vikram/demo/domain/Post.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
7 errors
